2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab):
	I guess I've fixed #475291 :)
	
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_extension):
	Just intend and changed order of a switch

2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab):
	Using switch

2007-11-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Fix the output of the configure script (wrong variable was checked).

2007-11-05  Benjamin Berg  <benjamin@sipsolutions.net>

	Merged all the changes from the less-widget-check branch.

2007-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	* themes/Industrial/gtk-2.0/gtkrc:
	Set a dummy hint to disable engine fallbacks.

2007-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box):
	* themes/Industrial/gtk-2.0/gtkrc:
	Nice new treeview header for industrial.

2007-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box),
	(draw_focus):
	* themes/Industrial/gtk-2.0/gtkrc:
	Use hints in Industrial!

2007-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_rc_style.c:
	(industrial_rc_style_init), (industrial_rc_style_merge):
	* engines/industrial/src/industrial_rc_style.h:
	* engines/industrial/src/industrial_style.h:
	* engines/industrial/src/industrial_style_versioned_code.h:
	* engines/industrial/src/parse_rc_style.h:
	Added hint parsing to industrial.

2007-08-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_parse):
	* engines/support/general-support.h:
	* engines/support/widget-information.c: (ge_rc_parse_hint):
	* engines/support/widget-information.h: